--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gulp-htmlmin": "4.0.0",
     "gulp-nunjucks-render": "2.2.2",
     "gulp-open": "^3.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-watch": "5.0.0",
     "pump": "3.0.0",
     "run-sequence": "2.2.1"
