--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
   },
   "license": "MIT",
   "scripts": {
-    "start": "gulp development",
-    "build": "gulp build",
+    "start": "gulp development --silent",
+    "build": "gulp build --silent",
     "validate": "gulp validateHTML"
   },
   "devDependencies": {
+    "browser-sync": "^2.23.6",
+    "cors": "2.8.4",
+    "del": "3.0.0",
     "gulp": "3.9.1",
     "gulp-amphtml-validator": "1.0.2",
-    "gulp-clean": "0.4.0",
-    "gulp-connect": "5.5.0",
+    "gulp-combine-media-queries": "0.2.0",
     "gulp-htmlmin": "4.0.0",
     "gulp-nunjucks-render": "2.2.2",
-    "gulp-open": "^3.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-open": "3.0.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "3.1.0",
     "gulp-watch": "5.0.0",
-    "pump": "3.0.0",
     "run-sequence": "2.2.1"
   }
 }
