--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-open": "3.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "3.1.0",
+    "gulp-sitemap": "^5.1.0",
     "gulp-watch": "5.0.0",
     "run-sequence": "2.2.1"
   }
