--- a/package.json
+++ b/package.json
@@ -9,21 +9,19 @@
   "scripts": {
     "start": "gulp development --silent",
     "build": "gulp build --silent",
-    "validate": "gulp validateHTML"
+    "validate": "gulp validate"
   },
   "devDependencies": {
-    "browser-sync": "^2.23.6",
-    "cors": "2.8.4",
+    "browser-sync": "2.23.6",
     "del": "3.0.0",
     "gulp": "3.9.1",
     "gulp-amphtml-validator": "1.0.2",
-    "gulp-combine-media-queries": "0.2.0",
     "gulp-htmlmin": "4.0.0",
     "gulp-nunjucks-render": "2.2.2",
     "gulp-open": "3.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "3.1.0",
-    "gulp-sitemap": "^5.1.0",
+    "gulp-sitemap": "5.1.0",
     "gulp-watch": "5.0.0",
     "run-sequence": "2.2.1"
   }
